2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* include/functions_visual_map.php: Problem fixed on
	get_layout_status() with label elements. Fixed definitely
	#2787197.

2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: return_status_agent() renamed to
	get_agent_status(). Improved get_agentmodule_status() documentation
	and code.

	* include/functions_visual_map.php: Styles correction. Use a switch
	instead of many ifs. Fixed get_layout_status() so the bad values have
	preference. Fixes #2787197.

2009-05-25  Esteban Sanchez  <estebans@artica.es>

	* godmode/modules/manage_network_components.php: Fixed a typo on
	onsubmit paramter that was avoiding asking for confirmation.

2009-05-25  Esteban Sanchez  <estebans@artica.es>

	* general/ui/agents_list.php: Fixed pagination javascript selector
	to avoid collisions.

	* godmode/modules/manage_nc_groups.php,
	godmode/modules/manage_nc_groups_form.php: Rewritten to use pandora
	functions. Code cleanup.

	* godmode/modules/manage_network_components.php: Fixed string search
	query.

	* include/functions_network_components.php: Added
	get_network_component_group().

2009-05-25  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated PO template.

2009-05-22  Esteban Sanchez  <estebans@artica.es>

	* include/javascript/pandora_modules.js: Set values of plugin
	component when one of this kind is selected.

2009-05-22  Esteban Sanchez  <estebans@artica.es>

	* extras/pandoradb_migrate_v2.x_to_v3.0.sql,
	pandoradb.sql: Added id_plugin. Database breakage requested and
	approved.

	* godmode/modules/manage_network_components_form_common.php,
	godmode/modules/manage_network_components_form_plugin.php: Added
	to repository. New editor for network components.

	* godmode/modules/manage_network_components_form_network.php,
	godmode/modules/manage_network_components_form_wmi.php,